Revision history for BSON

{{$NEXT}}

v0.999.4  2016-06-27 23:19:56-04:00 America/New_York (TRIAL RELEASE)

    [Prereqs]

    - Bump Moo prereq to 2.002004 to work around core sub shadowing
      bug in generated constructor.  Removed workround added to BSON::DBRef
      in v0.999.3.

v0.999.3  2016-06-23 00:44:37-04:00 America/New_York (TRIAL RELEASE)

    [Bug fixes]

    - Fixed detection of Infinity/NaN during serialization of BSON::Double
      to JSON for Windows perls before 5.22.0.

    - Work around compilation ambiguities involving the core keyword 'ref'
      and the BSON::DBRef attribute 'ref' in certain versions of Moo.

    [Testing]

    - Require newer Path::Tiny with full-featured "basename" method.

v0.999.2  2016-06-13 16:02:54-04:00 America/New_York (TRIAL RELEASE)

    [Added]

    - Added full "minimum set" of overloaded operations to numeric and
      string type wrappers.

    - Added convenience functions to provide "Infinity" and "NaN" double
      values.

    [Testing]

    - Replace double test cases for better portability.

    - Skip threads tests before 5.8.5 because of problems with
      weak references during global destruction.

v0.999.1  2016-06-08 16:03:23-04:00 America/New_York (TRIAL RELEASE)

    [Testing]

    - Checks for JSON serialization of doubles with no fractional part with
      a regular expression to account for the way that different JSON
      backends will handle it.

    - Skip testing TO_JSON under JSON::PP if the value to be converted
      is false. See https://github.com/makamaka/JSON-PP/pull/23 for why.

    - Skip some BSON double tests on 32-bit perls with JSON::PP to work
      around a JSON::PP bug.

    [~Internal Changes~]

    - Disambiguates calls to 'ref' in BSON::DBRef to avoid warnings.

v0.999.0  2016-06-01 18:27:43-04:00 America/New_York (TRIAL RELEASE)

    [!!! Incompatible Changes !!!]

    - Internal representation of BSON::Bool changed to make it a subclass