@@ -30,7 +30,7 @@ my %WriteMakefileArgs = (
     "Time::HiRes" => 0,
     "Time::Local" => 0,
     "base" => 0,
-    "boolean" => 0,
+    "boolean" => "0.45",
     "constant" => 0,
     "if" => 0,
     "namespace::clean" => 0,
@@ -81,7 +81,7 @@ my %FallbackPrereqs = (
   "Time::HiRes" => 0,
   "Time::Local" => 0,
   "base" => 0,
-  "boolean" => 0,
+  "boolean" => "0.45",
   "constant" => 0,
   "if" => 0,
   "lib" => 0,
