@@ -8,7 +8,7 @@ package BSON::Bool;
 use version;
 our $VERSION = 'v0.999.5';
 
-use boolean ();
+use boolean 0.45 ();
 our @ISA = qw/boolean/;
 
 sub new {
